test: update redirect tests

--- a/tests/data/exprs.yml
+++ b/tests/data/exprs.yml
@@ -167,15 +167,15 @@ redir_inp:
   - inp: "$[< input.txt cat]"
     exp: "__xonsh__.cmd('cat', redirects={'<': 'input.txt'}).run()"
   - inp: "$[cat < /path/to/input.txt]"
-    exp: "__xonsh__.cmd('cat', redirects={'<': 'input.txt'}).run()"
-  - inp: "$[(cat) < /path/to/input.txt]"
-    exp: "__xonsh__.cmd('cat', redirects={'<': '/path/to/output.txt'}).run()"
+    exp: "__xonsh__.cmd('cat', redirects={'<': '/path/to/input.txt'}).run()"
+  - inp: "$[cat < /path/to/input.txt]"
+    exp: "__xonsh__.cmd('cat', redirects={'<': '/path/to/input.txt'}).run()"
   - inp: "$[< /path/to/input.txt cat]"
-    exp: "__xonsh__.cmd('cat', redirects={'<': 'input.txt'}).run()"
-  - inp: "![< /path/to/input.txt]"
-    exp: "__xonsh__.cmd('cat', redirects={'<': 'input.txt'}).hide()"
-  - inp: "![< /path/to/input.txt > /path/to/output.txt]"
-    exp: "__xonsh__.cmd('cat', redirects={'<': '/path/to/output.txt'}).hide()"
+    exp: "__xonsh__.cmd('cat', redirects={'<': '/path/to/input.txt'}).run()"
+  - inp: "![< /path/to/input.txt cat]"
+    exp: "__xonsh__.cmd('cat', redirects={'<': '/path/to/input.txt'}).hide()"
+  - inp: "![< /path/to/input.txt cat > /path/to/output.txt]"
+    exp: "__xonsh__.cmd('cat', redirects={'<': '/path/to/input.txt', '>': '/path/to/output.txt'}).hide()"
 proc_macros:
   - inp: "![echo !]"
     exp: __xonsh__.cmd('echo', '').hide()
