--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -174,6 +174,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test]
     steps:
+      - uses: actions/checkout@v3
       - uses: ./.github/actions/pkg-install
         with:
           python-version: "3.13"
