--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -163,6 +163,7 @@ jobs:
           - "3.12"
           - "3.13"
     steps:
+      - uses: actions/checkout@v3
       - uses: ./.github/actions/pkg-install
         with:
           python-version: ${{ matrix.python-version }}
