--- a/tests/data/exprs.yml
+++ b/tests/data/exprs.yml
@@ -1,165 +1,169 @@
 env:
-- inp: $WAKKA
-  exp: __xonsh__.env['WAKKA']
-- inp: ${None or $JAWAKA}
-  exp: __xonsh__.env[None or __xonsh__.env['JAWAKA']]
+  - inp: $WAKKA
+    exp: __xonsh__.env['WAKKA']
+  - inp: ${None or $JAWAKA}
+    exp: __xonsh__.env[None or __xonsh__.env['JAWAKA']]
 
 captured:
-- inp: $(cmd sub-cmd --opt)
-  exp: __xonsh__.cmd('cmd', 'sub-cmd', '--opt').out()
-- inp: $[cmd sub-cmd --opt]
-  exp: __xonsh__.cmd('cmd', 'sub-cmd', '--opt').run()
-- inp: $[git commit -am "wakka"]
-  exp: __xonsh__.cmd('git', 'commit', '-am', 'wakka').run()
-- inp: $[git commit -am "wakka jawaka"]
-  exp: __xonsh__.cmd('git', 'commit', '-am', 'wakka jawaka').run()
-- inp: $[ls "wakka jawaka baraka"]
-  exp: __xonsh__.cmd('ls', 'wakka jawaka baraka').run()
+  - inp: $(cmd sub-cmd --opt)
+    exp: __xonsh__.cmd('cmd', 'sub-cmd', '--opt').out()
+  - inp: $[cmd sub-cmd --opt]
+    exp: __xonsh__.cmd('cmd', 'sub-cmd', '--opt').run()
+  - inp: $[git commit -am "wakka"]
+    exp: __xonsh__.cmd('git', 'commit', '-am', 'wakka').run()
+  - inp: $[git commit -am "wakka jawaka"]
+    exp: __xonsh__.cmd('git', 'commit', '-am', 'wakka jawaka').run()
+  - inp: $[ls "wakka jawaka baraka"]
+    exp: __xonsh__.cmd('ls', 'wakka jawaka baraka').run()
 uncaptured:
-- inp: '![cmd sub-cmd --opt]'
-  exp: __xonsh__.cmd('cmd', 'sub-cmd', '--opt').hide()
-- inp: '!(cmd sub-cmd --opt)'
-  exp: __xonsh__.cmd('cmd', 'sub-cmd', '--opt').obj()
-- inp: '![git commit -am "wakka"]'
-  exp: __xonsh__.cmd('git', 'commit', '-am', 'wakka').hide()
-- inp: '![git commit -am "wakka jawaka"]'
-  exp: __xonsh__.cmd('git', 'commit', '-am', 'wakka jawaka').hide()
-- inp: '![ls "wakka jawaka baraka"]'
-  exp: __xonsh__.cmd('ls', 'wakka jawaka baraka').hide()
-- inp: '![echo ,]'
-  exp: __xonsh__.cmd('echo', ',').hide()
-- inp: '![echo 1,2]'
-  exp: __xonsh__.cmd('echo', '1,2').hide()
-- inp: "!(echo '$foo')"
-  exp: __xonsh__.cmd('echo', '$foo').obj()
-- inp: "!(echo r'$foo')"
-  exp: __xonsh__.cmd('echo', '$foo').obj()
+  - inp: "![cmd sub-cmd --opt]"
+    exp: __xonsh__.cmd('cmd', 'sub-cmd', '--opt').hide()
+  - inp: "!(cmd sub-cmd --opt)"
+    exp: __xonsh__.cmd('cmd', 'sub-cmd', '--opt').obj()
+  - inp: '![git commit -am "wakka"]'
+    exp: __xonsh__.cmd('git', 'commit', '-am', 'wakka').hide()
+  - inp: '![git commit -am "wakka jawaka"]'
+    exp: __xonsh__.cmd('git', 'commit', '-am', 'wakka jawaka').hide()
+  - inp: '![ls "wakka jawaka baraka"]'
+    exp: __xonsh__.cmd('ls', 'wakka jawaka baraka').hide()
+  - inp: "![echo ,]"
+    exp: __xonsh__.cmd('echo', ',').hide()
+  - inp: "![echo 1,2]"
+    exp: __xonsh__.cmd('echo', '1,2').hide()
+  - inp: "!(echo '$foo')"
+    exp: __xonsh__.cmd('echo', '$foo').obj()
+  - inp: "!(echo r'$foo')"
+    exp: __xonsh__.cmd('echo', '$foo').obj()
 pipe:
-- inp: $(ls | grep wakka)
-  exp: __xonsh__.cmd('ls').pipe('grep', 'wakka').out()
-- inp: $(ls | grep wakka | grep jawaka)
-  exp: __xonsh__.cmd('ls').pipe('grep', 'wakka').pipe('grep', 'jawaka').out()
+  - inp: $(ls | grep wakka)
+    exp: __xonsh__.cmd('ls').pipe('grep', 'wakka').out()
+  - inp: $(ls | grep wakka | grep jawaka)
+    exp: __xonsh__.cmd('ls').pipe('grep', 'wakka').pipe('grep', 'jawaka').out()
 ands:
-- inp: '![ls me] and ![grep wakka]'
-  exp: __xonsh__.cmd('ls', 'me').hide() and __xonsh__.cmd('grep', 'wakka').hide()
-- inp: '![ls] and ![grep wakka] and ![grep jawaka]'
-  exp: __xonsh__.cmd('ls').hide() and __xonsh__.cmd('grep', 'wakka').hide() and __xonsh__.cmd('grep',
-    'jawaka').hide()
-- inp: '![ls] && ![grep wakka]'
-  exp: __xonsh__.cmd('ls').hide() and __xonsh__.cmd('grep', 'wakka').hide()
-- inp: '![ls] && ![grep wakka] && ![grep jawaka]'
-  exp: __xonsh__.cmd('ls').hide() and __xonsh__.cmd('grep', 'wakka').hide() and __xonsh__.cmd('grep',
-    'jawaka').hide()
+  - inp: "![ls me] and ![grep wakka]"
+    exp: __xonsh__.cmd('ls', 'me').hide() and __xonsh__.cmd('grep', 'wakka').hide()
+  - inp: "![ls] and ![grep wakka] and ![grep jawaka]"
+    exp:
+      __xonsh__.cmd('ls').hide() and __xonsh__.cmd('grep', 'wakka').hide() and __xonsh__.cmd('grep',
+      'jawaka').hide()
+  - inp: "![ls] && ![grep wakka]"
+    exp: __xonsh__.cmd('ls').hide() and __xonsh__.cmd('grep', 'wakka').hide()
+  - inp: "![ls] && ![grep wakka] && ![grep jawaka]"
+    exp:
+      __xonsh__.cmd('ls').hide() and __xonsh__.cmd('grep', 'wakka').hide() and __xonsh__.cmd('grep',
+      'jawaka').hide()
 ors:
-- inp: '![ls] or ![grep wakka]'
-  exp: __xonsh__.cmd('ls').hide() or __xonsh__.cmd('grep', 'wakka').hide()
-- inp: '![ls] or ![grep wakka] or ![grep jawaka]'
-  exp: __xonsh__.cmd('ls').hide() or __xonsh__.cmd('grep', 'wakka').hide() or __xonsh__.cmd('grep',
-    'jawaka').hide()
-- inp: '![ls] || ![grep wakka]'
-  exp: __xonsh__.cmd('ls').hide() or __xonsh__.cmd('grep', 'wakka').hide()
-- inp: '![ls] || ![grep wakka] || ![grep jawaka]'
-  exp: __xonsh__.cmd('ls').hide() or __xonsh__.cmd('grep', 'wakka').hide() or __xonsh__.cmd('grep',
-    'jawaka').hide()
+  - inp: "![ls] or ![grep wakka]"
+    exp: __xonsh__.cmd('ls').hide() or __xonsh__.cmd('grep', 'wakka').hide()
+  - inp: "![ls] or ![grep wakka] or ![grep jawaka]"
+    exp:
+      __xonsh__.cmd('ls').hide() or __xonsh__.cmd('grep', 'wakka').hide() or __xonsh__.cmd('grep',
+      'jawaka').hide()
+  - inp: "![ls] || ![grep wakka]"
+    exp: __xonsh__.cmd('ls').hide() or __xonsh__.cmd('grep', 'wakka').hide()
+  - inp: "![ls] || ![grep wakka] || ![grep jawaka]"
+    exp:
+      __xonsh__.cmd('ls').hide() or __xonsh__.cmd('grep', 'wakka').hide() or __xonsh__.cmd('grep',
+      'jawaka').hide()
 bg:
-- inp: $(emacs ugggh &)
-  exp: __xonsh__.cmd('emacs', 'ugggh', bg=True).out()
-- inp: $(emacs ugggh&)
-  exp: __xonsh__.cmd('emacs', 'ugggh', bg=True).out()
-- inp: $(emacs ugggh &)
-  exp: __xonsh__.cmd('emacs', 'ugggh', bg=True).out()
-- inp: $(emacs ugggh&)
-  exp: __xonsh__.cmd('emacs', 'ugggh', bg=True).out()
+  - inp: $(emacs ugggh &)
+    exp: __xonsh__.cmd('emacs', 'ugggh', bg=True).out()
+  - inp: $(emacs ugggh&)
+    exp: __xonsh__.cmd('emacs', 'ugggh', bg=True).out()
+  - inp: $(emacs ugggh &)
+    exp: __xonsh__.cmd('emacs', 'ugggh', bg=True).out()
+  - inp: $(emacs ugggh&)
+    exp: __xonsh__.cmd('emacs', 'ugggh', bg=True).out()
 regex:
-- inp: '`hello`'
-  exp: __xonsh__.Pattern('hello').regex()
-- inp: $(ls `#[Ff]+i*LE` -l)
-  exp: __xonsh__.cmd('ls', __xonsh__.Pattern('#[Ff]+i*LE').regex(), '-l').out()
-- inp: print(`#.*`)
-  exp: print(__xonsh__.Pattern('#.*').regex())
+  - inp: "`hello`"
+    exp: __xonsh__.Pattern('hello').regex()
+  - inp: $(ls `#[Ff]+i*LE` -l)
+    exp: __xonsh__.cmd('ls', __xonsh__.Pattern('#[Ff]+i*LE').regex(), '-l').out()
+  - inp: print(`#.*`)
+    exp: print(__xonsh__.Pattern('#.*').regex())
 _prefix-regex:
-- inp: $(ls r`[Ff]+i*LE` -l)
-  exp: __xonsh__.cmd('ls', __xonsh__.Pattern('[Ff]+i*LE').regex(), '-l').out()
-- inp: $(ls f`{mypattern[0]}+` -l)
-  exp: __xonsh__.cmd('ls', __xonsh__.Pattern('[Ff]+i*LE').regex(), '-l').out()
+  - inp: $(ls r`[Ff]+i*LE` -l)
+    exp: __xonsh__.cmd('ls', __xonsh__.Pattern('[Ff]+i*LE').regex(), '-l').out()
+  - inp: $(ls f`{mypattern[0]}+` -l)
+    exp: __xonsh__.cmd('ls', __xonsh__.Pattern('[Ff]+i*LE').regex(), '-l').out()
 glob:
-- inp: $(ls g`[Ff]+i*LE` -l)
-  exp: __xonsh__.cmd('ls', __xonsh__.Pattern('[Ff]+i*LE').glob(), '-l').out()
-- inp: $(ls g`#[Ff]+i*LE` -l)
-  exp: __xonsh__.cmd('ls', __xonsh__.Pattern('#[Ff]+i*LE').glob(), '-l').out()
+  - inp: $(ls g`[Ff]+i*LE` -l)
+    exp: __xonsh__.cmd('ls', __xonsh__.Pattern('[Ff]+i*LE').glob(), '-l').out()
+  - inp: $(ls g`#[Ff]+i*LE` -l)
+    exp: __xonsh__.cmd('ls', __xonsh__.Pattern('#[Ff]+i*LE').glob(), '-l').out()
 decorator:
-- inp: $(ls @foo`[Ff]+i*LE` -l)
-  exp: __xonsh__.cmd('ls', *__xonsh__.Pattern('[Ff]+i*LE').invoke(foo), '-l').out()
-- inp: print(@foo`.*`)
-  exp: print(__xonsh__.Pattern('.*').invoke(foo))
-- inp: $(ls @foo`#[Ff]+i*LE` -l)
-  exp: __xonsh__.cmd('ls', *__xonsh__.Pattern('#[Ff]+i*LE').invoke(foo), '-l').out()
+  - inp: $(ls @foo`[Ff]+i*LE` -l)
+    exp: __xonsh__.cmd('ls', *__xonsh__.Pattern('[Ff]+i*LE').invoke(foo), '-l').out()
+  - inp: print(@foo`.*`)
+    exp: print(__xonsh__.Pattern('.*').invoke(foo))
+  - inp: $(ls @foo`#[Ff]+i*LE` -l)
+    exp: __xonsh__.cmd('ls', *__xonsh__.Pattern('#[Ff]+i*LE').invoke(foo), '-l').out()
 help:
-- inp: range?
-  exp: __xonsh__.help(range)
-- inp: range?.index?
-  exp: __xonsh__.help(__xonsh__.help(range).index)
-- inp: range??
-  exp: __xonsh__.superhelp(range)
+  - inp: range?
+    exp: __xonsh__.help(range)
+  - inp: range?.index?
+    exp: __xonsh__.help(__xonsh__.help(range).index)
+  - inp: range??
+    exp: __xonsh__.superhelp(range)
 paths:
-- inp: p"/foo"
-  exp: __xonsh__.path_literal('/foo')
+  - inp: p"/foo"
+    exp: __xonsh__.path_literal('/foo')
 _rpaths:
-- inp: pr"/foo"
-  exp: __xonsh__.path_literal('/foo')
-- inp: rp"/foo"
-  exp: __xonsh__.path_literal('/foo')
-- inp: pR"/foo"
-  exp: __xonsh__.path_literal('/foo')
-- inp: Rp"/foo"
-  exp: __xonsh__.path_literal('/foo')
+  - inp: pr"/foo"
+    exp: __xonsh__.path_literal('/foo')
+  - inp: rp"/foo"
+    exp: __xonsh__.path_literal('/foo')
+  - inp: pR"/foo"
+    exp: __xonsh__.path_literal('/foo')
+  - inp: Rp"/foo"
+    exp: __xonsh__.path_literal('/foo')
 _fpaths:
-- inp: pf"/foo"
-  exp: __xonsh__.path_literal(f'/foo')
-- inp: fp"/foo"
-  exp: __xonsh__.path_literal(f'/foo')
-- inp: pF"/foo"
-  exp: __xonsh__.path_literal(f'/foo')
-- inp: Fp"/foo"
-  exp: __xonsh__.path_literal(f'/foo')
-- inp: pf"/foo{1+1}"
-  exp: __xonsh__.path_literal(f'/foo{1 + 1}')
-- inp: fp"/foo{1+1}"
-  exp: __xonsh__.path_literal(f'/foo{1 + 1}')
-- inp: pF"/foo{1+1}"
-  exp: __xonsh__.path_literal(f'/foo{1 + 1}')
-- inp: Fp"/foo{1+1}"
-  exp: __xonsh__.path_literal(f'/foo{1 + 1}')
+  - inp: pf"/foo"
+    exp: __xonsh__.path_literal(f'/foo')
+  - inp: fp"/foo"
+    exp: __xonsh__.path_literal(f'/foo')
+  - inp: pF"/foo"
+    exp: __xonsh__.path_literal(f'/foo')
+  - inp: Fp"/foo"
+    exp: __xonsh__.path_literal(f'/foo')
+  - inp: pf"/foo{1+1}"
+    exp: __xonsh__.path_literal(f'/foo{1 + 1}')
+  - inp: fp"/foo{1+1}"
+    exp: __xonsh__.path_literal(f'/foo{1 + 1}')
+  - inp: pF"/foo{1+1}"
+    exp: __xonsh__.path_literal(f'/foo{1 + 1}')
+  - inp: Fp"/foo{1+1}"
+    exp: __xonsh__.path_literal(f'/foo{1 + 1}')
 
 proc-injection:
-- inp: $[@$(which python)]
-  exp: __xonsh__.cmd(__xonsh__.cmd('which', 'python').inject()).run()
-- inp: $[ls @$(dirname @$(which python))]
-  exp: __xonsh__.cmd('ls', __xonsh__.cmd('dirname', __xonsh__.cmd('which', 'python').inject()).inject()).run()
+  - inp: $[@$(which python)]
+    exp: __xonsh__.cmd(__xonsh__.cmd('which', 'python').inject()).run()
+  - inp: $[ls @$(dirname @$(which python))]
+    exp: __xonsh__.cmd('ls', __xonsh__.cmd('dirname', __xonsh__.cmd('which', 'python').inject()).inject()).run()
 
 proc-py:
-- inp: '!(ls @(None or x))'
-  exp: __xonsh__.cmd('ls', __xonsh__.list_of_strs_or_callables(None or x)).obj()
+  - inp: "!(ls @(None or x))"
+    exp: __xonsh__.cmd('ls', __xonsh__.list_of_strs_or_callables(None or x)).obj()
 
 _expand:
-- inp: '![a@$(echo 1 2)b]'
-- inp: '![echo $WAKKA/place]'
+  - inp: "![a@$(echo 1 2)b]"
+  - inp: "![echo $WAKKA/place]"
 
 redirects:
-- inp: '!(ls >> x.py)'
-  exp: "__xonsh__.cmd('ls', redirects={'>>': 'x.py'}).obj()"
-- inp: '!(ls | grep wakka > x.py)'
-  exp: "__xonsh__.cmd('ls').pipe('grep', 'wakka', redirects={'>': 'x.py'}).obj()"
-- inp: '!(ls | grep wakka >> x.py)'
-  exp: "__xonsh__.cmd('ls').pipe('grep', 'wakka', redirects={'>>': 'x.py'}).obj()"
-- inp: $(ls > x.py)
-  exp: "__xonsh__.cmd('ls', redirects={'>': 'x.py'}).out()"
-- inp: $(ls >> x.py)
-  exp: "__xonsh__.cmd('ls', redirects={'>>': 'x.py'}).out()"
-- inp: $(ls | grep wakka > x.py)
-  exp: "__xonsh__.cmd('ls').pipe('grep', 'wakka', redirects={'>': 'x.py'}).out()"
-- inp: $(ls | grep wakka >> x.py)
-  exp: "__xonsh__.cmd('ls').pipe('grep', 'wakka', redirects={'>>': 'x.py'}).out()"
+  - inp: "!(ls >> x.py)"
+    exp: "__xonsh__.cmd('ls', redirects={'>>': 'x.py'}).obj()"
+  - inp: "!(ls | grep wakka > x.py)"
+    exp: "__xonsh__.cmd('ls').pipe('grep', 'wakka', redirects={'>': 'x.py'}).obj()"
+  - inp: "!(ls | grep wakka >> x.py)"
+    exp: "__xonsh__.cmd('ls').pipe('grep', 'wakka', redirects={'>>': 'x.py'}).obj()"
+  - inp: $(ls > x.py)
+    exp: "__xonsh__.cmd('ls', redirects={'>': 'x.py'}).out()"
+  - inp: $(ls >> x.py)
+    exp: "__xonsh__.cmd('ls', redirects={'>>': 'x.py'}).out()"
+  - inp: $(ls | grep wakka > x.py)
+    exp: "__xonsh__.cmd('ls').pipe('grep', 'wakka', redirects={'>': 'x.py'}).out()"
+  - inp: $(ls | grep wakka >> x.py)
+    exp: "__xonsh__.cmd('ls').pipe('grep', 'wakka', redirects={'>>': 'x.py'}).out()"
 
 redir_inp:
   - inp: "$[cat < input.txt]"
@@ -199,3 +203,6 @@ proc_macros:
     exp: __xonsh__.cmd('echo', '-n', 'x').hide()
   - inp: "![echo  -n ! x ]"
     exp: __xonsh__.cmd('echo', '-n', 'x').hide()
+_bare_proc:
+  - inp: "python manage.py migrate app 007"
+    exp: __xonsh__.cmd('python', 'manage.py', 'migrate', 'app', '007').hide()
