--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dev = [
     "pytest-subtests>=0.13.1",
     "pytest>=8.2.2",
     "maturin-import-hook>=0.1.0",
-    "pytest-benchmark>=4.0.0",
+    "pytest-codspeed",
     "pytest-memray",
     #    "pytest-insta",
     "psutil",
