--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,14 +37,14 @@ bon = { workspace = true }
 # insta = { workspace = true }
 
 [workspace.dependencies]
-ruff_cache = { path = "crates/ruff_cache" }
-ruff_macros = { path = "crates/ruff_macros" }
+ruff_cache = { git = "https://github.com/astral-sh/ruff.git" }
+ruff_macros = { git = "https://github.com/astral-sh/ruff.git" }
 ruff_python_ast = { path = "crates/ruff_python_ast" }
 py_ast = { path = "crates/py_ast" }
 ruff_python_parser = { path = "crates/ruff_python_parser" }
-ruff_python_trivia = { path = "crates/ruff_python_trivia" }
-ruff_source_file = { path = "crates/ruff_source_file" }
-ruff_text_size = { path = "crates/ruff_text_size" }
+ruff_python_trivia = { git = "https://github.com/astral-sh/ruff.git" }
+ruff_source_file = { git = "https://github.com/astral-sh/ruff.git" }
+ruff_text_size = { git = "https://github.com/astral-sh/ruff.git" }
 
 bon = { version = "*" }
 num-complex = { version = "*" }
@@ -64,9 +64,9 @@ memchr = { version = "2.7.1" }
 once_cell = { version = "1.19.0" }
 proc-macro2 = { version = "1.0.79" }
 pyo3 = { version = "0.23.*", features = [
-  "abi3-py310",
-  "experimental-inspect",
-  "num-complex",
+    "abi3-py310",
+    "experimental-inspect",
+    "num-complex",
 ] }
 quote = { version = "1.0.23" }
 regex = { version = "1.10.2" }
