--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,12 +39,13 @@ bon = { workspace = true }
 [workspace.dependencies]
 ruff_cache = { git = "https://github.com/astral-sh/ruff.git", tag = "0.11.13"}
 ruff_macros = { git = "https://github.com/astral-sh/ruff.git", tag = "0.11.13"}
-ruff_python_ast = { path = "crates/ruff_python_ast" }
+ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.11.13" }
 py_ast = { path = "crates/py_ast" }
 ruff_python_parser = { path = "crates/ruff_python_parser" }
 ruff_python_trivia = { git = "https://github.com/astral-sh/ruff.git", tag = "0.11.13"}
 ruff_source_file = { git = "https://github.com/astral-sh/ruff.git", tag = "0.11.13"}
 ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", tag = "0.11.13"}
+ruff_annotate_snippets = { git = "https://github.com/astral-sh/ruff.git", tag = "0.11.13"}
 
 bon = { version = "*" }
 num-complex = { version = "*" }
@@ -66,6 +67,7 @@ pyo3 = { version = "0.*", features = [
 rustc-hash = { version = "2.0.0" }
 schemars = { version = "0.8.16" }
 serde = { version = "1.0.197", features = ["derive"] }
+serde_json = { version = "1.0.109"}
 static_assertions = "1.1.0"
 unicode-ident = { version = "1.0.12" }
 unicode_names2 = { version = "1.2.2" }
