--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
-description = "A Rust based, recursive descent parser for [Xonsh](https://xon.sh)."
+description = "A Rust based, recursive descent parser for Xonsh"
 
 [dependency-groups]
 dev = [
