--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,12 @@ ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", tag = "0.12.8"
 ruff_annotate_snippets = { git = "https://github.com/astral-sh/ruff.git", tag = "0.12.8" }
 
 bon = { version = "*" }
+get-size2 = { version = "0.6.2", features = [
+    "derive",
+    "smallvec",
+    "hashbrown",
+    "compact-str",
+] }
 num-complex = { version = "*" }
 aho-corasick = { version = "1.1.3" }
 annotate-snippets = { version = "*", features = ["color"] }
