--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,7 +11,7 @@ on:
       - main
       - master
     tags:
-      - '*'
+      - "*"
   pull_request:
   workflow_dispatch:
 
@@ -198,10 +198,18 @@ jobs:
           dist-name: wheels-linux-x86_64
       - name: test with pytest
         run: uv run --no-sync pytest
-      - uses: CodSpeedHQ/action@v3
-        if: matrix.python-version == '3.13'
+  benchmark:
+    runs-on: ubuntu-latest
+    needs: [test]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/pkg-install
         with:
-          run: uv run --no-sync pytest tests/bench.py --codspeed
+          python-version: "3.13"
+          dist-name: wheels-linux-x86_64
+      - uses: CodSpeedHQ/action@v3
+        with:
+          run: uv run --no-sync pytest tests/bench.py --codspeed -vv
           token: ${{ secrets.CODSPEED_TOKEN }}
         name: run benchmark
 
@@ -222,7 +230,7 @@ jobs:
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v2
         with:
-          subject-path: 'wheels-*/*'
+          subject-path: "wheels-*/*"
       - name: Publish to PyPI
         if: ${{ startsWith(github.ref, 'refs/tags/') }}
         uses: PyO3/maturin-action@v1
