ci: update benchmark save location

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dev = [
 ]
 [tool.maturin]
 features = ["pyo3/extension-module"]
+profile = "release"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
