--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,16 +26,16 @@ jobs:
         platform:
           - runner: ubuntu-22.04
             target: x86_64
-          - runner: ubuntu-22.04
-            target: x86
+#          - runner: ubuntu-22.04
+#            target: x86
           - runner: ubuntu-22.04
             target: aarch64
           - runner: ubuntu-22.04
             target: armv7
-          - runner: ubuntu-22.04
-            target: s390x
-          - runner: ubuntu-22.04
-            target: ppc64le
+#          - runner: ubuntu-22.04
+#            target: s390x
+#          - runner: ubuntu-22.04
+#            target: ppc64le
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -68,8 +68,8 @@ jobs:
         platform:
           - runner: ubuntu-22.04
             target: x86_64
-          - runner: ubuntu-22.04
-            target: x86
+#          - runner: ubuntu-22.04
+#            target: x86
           - runner: ubuntu-22.04
             target: aarch64
           - runner: ubuntu-22.04
@@ -108,8 +108,8 @@ jobs:
         platform:
           - runner: windows-latest
             target: x64
-          - runner: windows-latest
-            target: x86
+#          - runner: windows-latest
+#            target: x86
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
