ci: update abi to match the minimum required python version from metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,7 +67,7 @@ is-macro = { version = "0.3.5" }
 itertools = { version = "0.13.0" }
 memchr = { version = "2.7.1" }
 pyo3 = { version = "0.*", features = [
-    "abi3-py310",
+    "abi3",
     "experimental-inspect",
     "num-complex",
 ] }
