--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,8 +30,8 @@ jobs:
 #            target: x86
           - runner: ubuntu-22.04
             target: aarch64
-          - runner: ubuntu-22.04
-            target: armv7
+#          - runner: ubuntu-22.04
+#            target: armv7
 #          - runner: ubuntu-22.04
 #            target: s390x
 #          - runner: ubuntu-22.04
@@ -74,8 +74,8 @@ jobs:
 #            target: x86
           - runner: ubuntu-22.04
             target: aarch64
-          - runner: ubuntu-22.04
-            target: armv7
+#          - runner: ubuntu-22.04
+#            target: armv7
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
