--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,21 +26,21 @@ jobs:
         platform:
           - runner: ubuntu-22.04
             target: x86_64
-#          - runner: ubuntu-22.04
-#            target: x86
+          #          - runner: ubuntu-22.04
+          #            target: x86
           - runner: ubuntu-22.04
             target: aarch64
-#          - runner: ubuntu-22.04
-#            target: armv7
-#          - runner: ubuntu-22.04
-#            target: s390x
-#          - runner: ubuntu-22.04
-#            target: ppc64le
+    #          - runner: ubuntu-22.04
+    #            target: armv7
+    #          - runner: ubuntu-22.04
+    #            target: s390x
+    #          - runner: ubuntu-22.04
+    #            target: ppc64le
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.x
+          python-version: "3.13"
       - name: Set PYO3_PYTHON environment variable
         run: echo "PYO3_PYTHON=$(which python)" >> $GITHUB_ENV
       - name: Build wheels
@@ -70,17 +70,17 @@ jobs:
         platform:
           - runner: ubuntu-22.04
             target: x86_64
-#          - runner: ubuntu-22.04
-#            target: x86
+          #          - runner: ubuntu-22.04
+          #            target: x86
           - runner: ubuntu-22.04
             target: aarch64
-#          - runner: ubuntu-22.04
-#            target: armv7
+    #          - runner: ubuntu-22.04
+    #            target: armv7
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.x
+          python-version: "3.13"
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -110,13 +110,13 @@ jobs:
         platform:
           - runner: windows-latest
             target: x64
-#          - runner: windows-latest
-#            target: x86
+    #          - runner: windows-latest
+    #            target: x86
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.x
+          python-version: "3.13"
           architecture: ${{ matrix.platform.target }}
       - name: Build wheels
         uses: PyO3/maturin-action@v1
@@ -149,7 +149,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.x
+          python-version: "3.13"
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -188,11 +188,9 @@ jobs:
     strategy:
       matrix:
         python-version:
-          - "3.10"
           - "3.11"
           - "3.12"
           - "3.13"
-          - "3.14"
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/pkg-install
