ci: update benchmarks

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -197,20 +197,11 @@ jobs:
           dist-name: wheels-linux-x86_64
       - name: test with pytest
         run: uv run --no-sync pytest
-  benchmark:
-    runs-on: ubuntu-latest
-    needs: [test]
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/pkg-install
-        with:
-          python-version: "3.13"
-          dist-name: wheels-linux-x86_64
       - uses: CodSpeedHQ/action@v3
+        if: ${{ matrix.python-version == '3.12' }}
         with:
-          run: pytest --codspeed tests/bench.py
+          run: uv run --no-sync pytest tests/bench.py --codspeed
           token: ${{ secrets.CODSPEED_TOKEN }}
-        name: run benchmark
 
   release:
     name: Release
